# admin-assistant

./: .bumpversion.cfg  .coveragerc  .dockerignore  .env.development  .env.development.example  .env.production.example  .env.testing.example  .gitignore  .isort.cfg  AGENTS.md  CLAUDE.md  LICENSE  README.md  alembic.ini  coverage.xml  debug_calendar_resolution.py  dev  pyproject.toml  pytest.ini  requirements.txt  run.py  test_db_tables.py
.agents/rules/: documentation.md  planning.md  preferences.md  testing.md
.cursor/rules/: guidelines.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  lint.yml  security-extra.yml  test.yml
.run/: All Tests.run.xml  Bandit JSON.run.xml  Bandit Text.run.xml  Black Check.run.xml  Calendar Resolution Debug.run.xml  DB Tables Smoke Test.run.xml  Fast Tests.run.xml  Flake8 Full.run.xml  Flake8 Strict.run.xml  Integration Tests.run.xml  Isort Check.run.xml  Lint All.run.xml  MSGraph Tests.run.xml  Mypy.run.xml  Safety JSON.run.xml  Safety Summary.run.xml  Security Scans (All).run.xml  Semgrep JSON.run.xml  Semgrep Text.run.xml  Unit Tests.run.xml  Utilities Tests.run.xml
.run/runConfigurations/: All Tests.run.xml  pytest in tests.run.xml
app/: __init__.py  config.py  models.py
app/routes/: main.py
app/services/: calendar_service.py  msgraph.py
app/templates/: base.html  index.html
cli/: main.py
core/: db.py  exceptions.py
core/migrations/: alembic.ini  env.py
core/models/: __init__.py  action_log.py  appointment.py  archive_configuration.py  audit_log.py  calendar.py  category.py  chat_session.py  entity_association.py  job_configuration.py  location.py  prompt.py  timesheet.py  user.py
core/orchestrators/: __init__.py  archive_job_runner.py  calendar_archive_orchestrator.py  overlap_resolution_orchestrator.py
core/repositories/: __init__.py  action_log_repository.py  appointment_repository_base.py  appointment_repository_msgraph.py  appointment_repository_sqlalchemy.py  archive_configuration_repository.py  audit_log_repository.py  calendar_repository_base.py  calendar_repository_msgraph.py  calendar_repository_sqlalchemy.py  category_repository.py  category_repository_base.py  category_repository_factory.py  category_repository_msgraph.py  chat_session_repository.py  entity_association_repository.py  factory.py  job_configuration_repository.py  prompt_repository.py  user_repository.py
core/services/: __init__.py  action_log_service.py  archive_configuration_service.py  audit_log_service.py  background_job_service.py  calendar_archive_service.py  calendar_fetch_service.py  calendar_io_service.py  calendar_overlap_utils.py  calendar_recurrence_utils.py  calendar_service.py  calendar_time_utils.py  category_processing_service.py  category_service.py  chat_session_service.py  enhanced_overlap_resolution_service.py  entity_association_service.py  job_configuration_service.py  meeting_modification_service.py  privacy_automation_service.py  prompt_service.py  scheduled_archive_job.py  scheduled_archive_service.py  user_service.py
core/stores/: base_store.py  msgraph_store.py  sqlalchemy_store.py
core/utilities/: __init__.py  audit_logging_utility.py  auth_utility.py  calendar_overlap_utility.py  calendar_recurrence_utility.py  graph_utility.py
docs/: COVERAGE_REPORT.md  Code-Quality-Report.md  Consolidated-Action-Plan.md  DRA-001-Documentation-Review-Analysis.md  Documentation-Updates-Summary.md  GENERIC_RESTORATION_IMPLEMENTATION_SUMMARY.md  GPT_AI_GUIDELINES.md  README.md  SECURITY_SCANNING.md  Security-Review-Report.md  Solo-Developer-AI-Process.md  Technical-Debt-Resolution-Summary.md  _template.md  index.md
docs/0-plans-and-status/: AIP-001-AI-Implementation-Prompts.md  CIS-001-Current-Implementation-Status.md  IMP-001-URI-Archive-Enhancement-Implementation-Prompts.md  TEST-FAILURE-ANALYSIS-001-Systematic-Resolution-Plan.md
docs/0-project-management/: README.md  _template.md
docs/1-requirements/: 0-SRS-000-Overview.md  0-SRS-Overview.md  1-SRS-Introduction.md  2-SRS-Overall-Description.md  3-SRS-Specific-Requirements.md  4-SRS-Use-Cases.md  5-SRS-Data-Model.md  6-SRS-External-Interfaces.md  7-SRS-Prioritization-Matrix.md  Microsoft ToDo MCP Spec.md  README.md  REQ-Contacts-Deduplicator.md  REQ-Microsoft-ToDo-MCP-Spec.md  WF-Outlook-Calendar-Management.md  _template.md  contacts deduplicator.md
docs/1. requirements/: 0-SRS-Overview.md  1-SRS-Introduction.md  2-SRS-Overall-Description.md  3-SRS-Specific-Requirements.md  5-SRS-Data-Model.md  6-SRS-External-Interfaces.md  7-SRS-Prioritization-Matrix.md
docs/2-architecture/: ARCH-001-System-Architecture.md  ARCH-002-Observability.md  CLI-001-Command-Structure.md  DATA-001-Application-Data-Model.md  DATA-002-Current-Schema.md  HLD-AI-001-AI-Integration-and-Recommendations.md  HLD-AUD-001-Audit-Log-and-Export.md  HLD-BIL-001-Timesheet-Generation-and-Export.md  README.md  (+19 more)
examples/: timesheet_archive_demo.py
migrations/: add_audit_log_table.py
sandbox/: create_archive_config_from_graph.py  privacy_automation_demo.py  run_archive_service_sample.py
scripts/: README.md  add_sample_interactive_prompt.py  dev_cli.py  fix_appointment_dates_and_times.py  init_core_db.py  integrate_volt_dashboard.sh  link_checker.py  run_appointment_datetime_fix.sh  run_memory_safe_tests.py  run_tests.py  run_tests_in_container.sh  test_uri_migration.py  test_uri_migration_README.md  test_uri_migration_functions.py
src/: __init__.py
tests/: COMPREHENSIVE_TEST_COVERAGE.md  __init__.py  conftest.py  run_comprehensive_tests.py  run_memory_aware_tests.py  test_appointment_model.py  test_appointment_model_extra.py  test_async_runner.py  test_audit_logging.py  test_auth_utility.py  test_calendar_overlap_utility.py  test_calendar_recurrence_utility.py  test_graph_utility.py  test_time_utility.py  test_uri_utility.py  test_uri_utility_extra.py  test_uri_utility_more.py  test_user_resolution.py  test_user_service.py
web/: __init__.py  run.py
(+440 files in other folders)
